# dify_observability

./: .env  .env.example  Blocks使用指南.md  README.md  fetch_workflow_logs.py  logs_report.md  pyproject.toml  requirements.txt  sss.md  test_flow.py  test_output.sh  启动和验证指南.md  多知识库+多引用文档.md  定时取数.md  快速启动.md  改造完成总结.md  改造方案.md  迁移指南.md  配置说明.md
deployments/: __init__.py  daily_report.py  weekly_report.py
outputs/reports/daily/: 问答类应用数-总览.csv  问答类应用数-每日消息数.csv  问答类应用数-用户列表.csv  问答类应用数-用户问答对.csv
outputs/reports/test/: 问答类应用数-总览.csv  问答类应用数-每日消息数.csv  问答类应用数-用户列表.csv  问答类应用数-用户问答对.csv
scripts/: create_block.py  setup_prefect.sh  verify.sh
src/: __init__.py
src/blocks/: __init__.py  workflow_report_config.py
src/core/: config.py  exceptions.py  logger.py
src/flows/: __init__.py  workflow_log_flow.py
src/flows/tasks/: __init__.py  enrich_task.py  fetch_task.py  report_task.py
src/services/: fetcher.py  notifier.py  reporter.py  storage.py
src/utils/: formatters.py  retry.py  validators.py
输出模版/: 问答类应用数-总览.csv  问答类应用数-每日消息数.csv  问答类应用数-用户列表.csv  问答类应用数-用户问答对.csv
